Fix layout of filter buttons for french locale (so the input for title does not wrap)

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -238,7 +238,7 @@ dl.filter dd
 #fieldset-filters #clear-element
 {
 	float: right;
-	margin-right: 1em;
+	margin-left: 1em;
 }
 
 dl.filter input
